# telegram_notes_bot

./: Cargo.toml  README.md  TODO.txt  event_alerts.js  new_reminder.js  task_alerts.js
notes/: !!!meta.json  index.html  navigation.html
notes/Implementation/: CSS.css  attribute changed.js  attribute sync button.js  button.js  daily reminder template.html  duplicate into next week button.js  event template.html  event_alerts handler.js  new_event handler.js  new_reminder handler.js  reminder template.html  task template.html  task_alerts handler.js
notes/Implementation/attribute changed/: reconcileAssignments.js
notes/Implementation/attribute sync button/: reconcileAssignments.clone.html
src/: ical_parsing.rs  lib.rs  main.rs
