[package]
name = "telegram_notes_bot"
version = "0.1.0"
authors = ["FliegendeWurst <2012gdwu@web.de>"]
license = "GPL-3.0+"
edition = "2018"

[dependencies]
tokio = { version =  "0.2.22", features = ["full"] }
telegram-bot = "0.7.0"
reqwest = { version = "0.10.4", features = ["json", "blocking"] }
chrono = { version = "0.4.11", features = ["serde"] }
url = "2.1.0"
futures-util = "0.3.4"
serde_derive = "1.0.106"
serde = "1.0.106"
once_cell = "1.3.1"
thiserror = "1.0.15"
serde_json = "1.0.51"
ical = "0.7.0"
mime = "0.3.16"
regex = "1.3.9"
