[package]
name = "telegram_notes_bot"
version = "0.1.0"
authors = ["FliegendeWurst <2012gdwu@web.de>"]
license = "AGPL-3.0+"
edition = "2018"

[dependencies]
tokio = { version =  "1.2.0", features = ["full"] }
telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot", rev = "07a9f9a1c76eaab2259bdc6241691187a46d69d1", default-features = false, features = ["rustls"] }
reqwest = { version = "0.11.1", default-features = false, features = ["json", "blocking", "rustls-tls-native-roots"] }
chrono = { version = "0.4.11", features = ["serde"] }
futures-util = "0.3.4"
serde_derive = "1.0.106"
serde = "1.0.106"
once_cell = "1.3.1"
thiserror = "1.0.15"
serde_json = "1.0.51"
ical = "0.7.0"
mime = "0.3.16"
regex = "1.3.9"
log = "0.4.14"
env_logger = "0.8.3"
